Harmonizing the Distributed Processing section
Added a reference to the bib, cleaned up and rearranged the text
(reduced, too).

--- a/bibliography.tex
+++ b/bibliography.tex
@@ -1,5 +1,6 @@
 \begin{thebibliography}{99}
 \bibitem{spade_icecube} IceCube Data Movement \url{https://icecube.wisc.edu/science/data/datamovement}.
 \bibitem{spade_dayabay}Data processing and storage in the Daya Bay Reactor Antineutrino Experimentt \url{http://arxiv.org/pdf/1501.06969.pdf}.
+\bibitem{atlas_express} Prompt reconstruction of LHC collision data with the ATLAS reconstruction software, N.Barlow et al, \textit{Journal of Physics: Conference Series 331 (2011) 032004}
 
 \end{thebibliography}
